<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginBottom="8dp"
    android:background="@color/colorTransBox">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorOnUserInput"
        />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTextView"
        android:hint="@string/hintType"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorOnUserInput"
        />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeTextView"
        android:hint="@string/hintAmount"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorOnUserInput"
        />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountTextView"
        android:hint="@string/hintDate"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorOnUserInput"
        />

    <TextView
        android:id="@+id/StateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateTextView"
        android:hint="@string/hintState"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorOnUserInput"
        />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/StateTextView"
        android:hint="@string/hintDescription"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorOnUserInput"
        />


</RelativeLayout>