<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name_description"
        android:padding="8dp"
        android:textColor="@color/colorOnUserInput"
        android:background="@drawable/custom_edittext"
        />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/amount_description"
        android:inputType="numberDecimal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:textColor="@color/colorOnUserInput"
        android:background="@drawable/custom_edittext"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Transaction Type:"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/spinner_border"
        android:text="@string/type_description"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="@color/purple"
        />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/date_description"
        android:inputType="date"
        android:padding="8dp"
        android:textColor="@color/colorOnUserInput"
        android:background="@drawable/custom_edittext"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/chooseDateButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/ChooseDate"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="20dp"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:gravity="top"
        android:background="@color/colorTransBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_description"
        android:padding="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/addTransactionConfirm"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/buttonReturn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/addTransactionReturn"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="20dp"/>

    </LinearLayout>

</LinearLayout>
