<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TopMainPageGroup"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/UsernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:hint="@string/username"
        android:gravity="bottom"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_toggle_theme" />

    <Button
        android:id="@+id/btn_toggle_theme"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="Theme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/UsernameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopMainPageGroup"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/create_button"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:text="@string/newTransaction"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/logOut_button"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:text="@string/log_Out"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/create_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
